<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.justjava.ui.MainActivity">

    <LinearLayout
        style="@style/MatchWidthWrapHeight.BesidePadding.SurroundPadding"
        android:orientation="vertical"
        >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_name"
            style="@style/MatchWidthWrapHeight"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_name"
                style="@style/MatchWidthWrapHeight"
                android:hint="@string/label_name"
                android:inputType="textCapWords"
                android:imeOptions="actionDone"
                />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/toppings_title_text_view"
            style="@style/MatchWidthWrapHeight.TextTitle"
            android:layout_marginTop="@dimen/view_space"
            android:text="@string/label_toppings"
            />

        <CheckBox
            android:id="@+id/cb_whipped_cream"
            style="@style/MatchWidthWrapHeight.Checkbox"
            android:text="@string/label_whipped_cream"
            />

        <CheckBox
            android:id="@+id/cb_chocolate"
            style="@style/MatchWidthWrapHeight.Checkbox"
            android:text="@string/label_chocolate"
            />

        <TextView
            android:id="@+id/quantity_title_text_view"
            style="@style/MatchWidthWrapHeight.TextTitle"
            android:text="@string/label_quantity_title"
            />

        <LinearLayout
            android:id="@+id/layout_quantity_picker"
            style="@style/MatchWidthWrapHeight"
            android:layout_marginTop="@dimen/view_space"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/btn_decrement"
                android:layout_width="@dimen/btn_small_symbol"
                android:layout_height="@dimen/btn_small_symbol"
                android:text="@string/symbol_minus"
                />

            <TextView
                android:id="@+id/quantity_text_view"
                style="@style/TextBody.WrapWidthWrapHeight"
                android:layout_marginEnd="@dimen/view_space_short"
                android:layout_marginLeft="@dimen/view_space_short"
                android:layout_marginRight="@dimen/view_space_short"
                android:layout_marginStart="@dimen/view_space_short"
                android:text="@string/label_quantity_value"
                />

            <Button
                android:id="@+id/btn_increment"
                android:layout_width="@dimen/btn_small_symbol"
                android:layout_height="@dimen/btn_small_symbol"
                android:text="@string/symbol_plus"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_order_summary_title"
            style="@style/MatchWidthWrapHeight.TextTitle"
            android:layout_marginTop="@dimen/view_space"
            android:text="@string/label_order_summary"
            />

        <TextView
            android:id="@+id/tv_order_summary"
            style="@style/TextBody.WrapWidthWrapHeight"
            android:layout_marginTop="@dimen/view_space"
            android:lineSpacingExtra="@dimen/view_space_short"
            android:text="@string/label_order_price_value"
            />

        <Button
            android:id="@+id/btn_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_space"
            android:onClick="submitOrder"
            android:text="@string/label_order"
            />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
